--- a/src/app/dlc/dlc.component.html
+++ b/src/app/dlc/dlc.component.html
@@ -1,94 +1,98 @@
-<mat-card>
-    <mat-card-header>
-        <h3><span>{{service.form.controls['id'].value? travel2: travel}}</span></h3>
-        <span class="fill-remaining-space"></span>
-        <button class="btn-dialog-close" mat-stroked-button color="warn" (click)="onClose()" tabIndex="-1"><mat-icon>clear</mat-icon></button>
-    </mat-card-header>
-    <mat-card-content>
-        <form [formGroup]="service.form" class="normal-form" (submit)="onSubmit()">
-            <input type="hidden" formControlName="id">
-            <mat-form-field>
-                <mat-select matNativeControl formControlName="nickname" placeholder="{{nickname}}">
-                    <div *ngFor="let profile of profiles">
-                        <mat-option value="{{profile.nickname}}">{{profile.nickname}}</mat-option>
-                    </div>
-                </mat-select>
-                <mat-error>{{mandatory}}</mat-error>
-            </mat-form-field>
+<mat-card-header>
+    <h3><span>{{service.form.controls['id'].value? travel2: travel}}</span></h3>
+    <span class="fill-remaining-space"></span>
+    <button class="btn-dialog-close" mat-stroked-button color="warn" (click)="onClose()" tabIndex="-1"><mat-icon>clear</mat-icon></button>
+</mat-card-header>
+<ion-content>
+    <ion-infinite-scroll>
+        <mat-card>
+        <mat-card-content>
+            <form [formGroup]="service.form" class="normal-form" (submit)="onSubmit()">
+                <input type="hidden" formControlName="id">
+                <mat-form-field>
+                    <mat-select matNativeControl formControlName="nickname" placeholder="{{nickname}}">
+                        <div *ngFor="let profile of profiles">
+                            <mat-option value="{{profile.nickname}}">{{profile.nickname}}</mat-option>
+                        </div>
+                    </mat-select>
+                    <mat-error>{{mandatory}}</mat-error>
+                </mat-form-field>
 
-            <mat-form-field>
-                <mat-select matNativeControl formControlName="arrivingFrom" placeholder="{{arrivingFrom}}">
-                    <div *ngFor="let country of countries">
-                        <mat-option value="{{country}}">{{country}}</mat-option>
-                    </div>
-                </mat-select>
-                <mat-error>{{mandatory}}</mat-error>
-            </mat-form-field>
+                <mat-form-field>
+                    <mat-select matNativeControl formControlName="arrivingFrom" placeholder="{{arrivingFrom}}">
+                        <div *ngFor="let country of countries">
+                            <mat-option value="{{country}}">{{country}}</mat-option>
+                        </div>
+                    </mat-select>
+                    <mat-error>{{mandatory}}</mat-error>
+                </mat-form-field>
 
-            <mat-form-field>
-                <mat-select matNativeControl formControlName="arrivalAirport"  placeholder="{{arrivalAirport}}">
-                    <div *ngFor="let airport of airports">
-                        <mat-option value="{{airport}}">{{airport}}</mat-option>
-                    </div>
-                </mat-select>
-                <mat-error>{{mandatory}}</mat-error>
-            </mat-form-field>
+                <mat-form-field>
+                    <mat-select matNativeControl formControlName="arrivalAirport"  placeholder="{{arrivalAirport}}">
+                        <div *ngFor="let airport of airports">
+                            <mat-option value="{{airport}}">{{airport}}</mat-option>
+                        </div>
+                    </mat-select>
+                    <mat-error>{{mandatory}}</mat-error>
+                </mat-form-field>
 
-            <mat-form-field>
-                <input formControlName="arrivingFlight" matInput placeholder="{{arrivingFlight}}">
-                <mat-error>{{mandatory}}</mat-error>
-            </mat-form-field>
+                <mat-form-field>
+                    <input formControlName="arrivingFlight" matInput placeholder="{{arrivingFlight}}">
+                    <mat-error>{{mandatory}}</mat-error>
+                </mat-form-field>
 
-            <mat-form-field>
-                <input formControlName="purposeOfTravel" matInput placeholder="{{purposeOfTravel}}">
-                <mat-error>{{mandatory}}</mat-error>
-            </mat-form-field>
+                <mat-form-field>
+                    <input formControlName="purposeOfTravel" matInput placeholder="{{purposeOfTravel}}">
+                    <mat-error>{{mandatory}}</mat-error>
+                </mat-form-field>
 
-            <mat-form-field>
-                <input formControlName="durationOfStay" matInput placeholder="{{durationOfStay}}">
-                <mat-error>{{mandatory}}</mat-error>
-            </mat-form-field>
+                <mat-form-field>
+                    <input formControlName="durationOfStay" matInput placeholder="{{durationOfStay}}">
+                    <mat-error>{{mandatory}}</mat-error>
+                </mat-form-field>
 
-            <br/>
+                <br/>
 
-            <mat-label>{{commercialGood}} : </mat-label><br/>
-            <mat-radio-group formControlName="commercialGood" aria-label="">
-                <mat-radio-button value="Yes">{{yes}}</mat-radio-button>
-                <mat-radio-button value="No">{{no}}</mat-radio-button>
-            </mat-radio-group>
-            <p></p>
-            <mat-label>{{currencyExceedingValue}} : </mat-label><br/>
-            <mat-radio-group formControlName="currencyExceedingValue" aria-label="">
-                <mat-radio-button value="Yes">{{yes}}</mat-radio-button>
-                <mat-radio-button value="No">{{no}}</mat-radio-button>
-            </mat-radio-group>
-            <p></p>
+                <mat-label>{{commercialGood}} : </mat-label><br/>
+                <mat-radio-group formControlName="commercialGood" aria-label="">
+                    <mat-radio-button value="Yes">{{yes}}</mat-radio-button>
+                    <mat-radio-button value="No">{{no}}</mat-radio-button>
+                </mat-radio-group>
+                <p></p>
+                <mat-label>{{currencyExceedingValue}} : </mat-label><br/>
+                <mat-radio-group formControlName="currencyExceedingValue" aria-label="">
+                    <mat-radio-button value="Yes">{{yes}}</mat-radio-button>
+                    <mat-radio-button value="No">{{no}}</mat-radio-button>
+                </mat-radio-group>
+                <p></p>
 
-            <mat-label>{{liveAnimalOrPlant}} : </mat-label><br/>
-            <mat-radio-group formControlName="liveAnimalOrPlant" aria-label="">
-                <mat-radio-button value="Yes">{{yes}}</mat-radio-button>
-                <mat-radio-button value="No">{{no}}</mat-radio-button>
-            </mat-radio-group>
-            <p></p>
+                <mat-label>{{liveAnimalOrPlant}} : </mat-label><br/>
+                <mat-radio-group formControlName="liveAnimalOrPlant" aria-label="">
+                    <mat-radio-button value="Yes">{{yes}}</mat-radio-button>
+                    <mat-radio-button value="No">{{no}}</mat-radio-button>
+                </mat-radio-group>
+                <p></p>
 
-            <mat-label>{{derivatives}} : </mat-label><br/>
-            <mat-radio-group formControlName="derivatives" aria-label="">
-                <mat-radio-button value="Yes">{{yes}}</mat-radio-button>
-                <mat-radio-button value="No">{{no}}</mat-radio-button>
-            </mat-radio-group>
-            <p></p>
+                <mat-label>{{derivatives}} : </mat-label><br/>
+                <mat-radio-group formControlName="derivatives" aria-label="">
+                    <mat-radio-button value="Yes">{{yes}}</mat-radio-button>
+                    <mat-radio-button value="No">{{no}}</mat-radio-button>
+                </mat-radio-group>
+                <p></p>
 
-            <mat-label>{{firearms}} : </mat-label><br/>
-            <mat-radio-group formControlName="firearms" aria-label="">
-                <mat-radio-button value="Yes">{{yes}}</mat-radio-button>
-                <mat-radio-button value="No">{{no}}</mat-radio-button>
-            </mat-radio-group>
+                <mat-label>{{firearms}} : </mat-label><br/>
+                <mat-radio-group formControlName="firearms" aria-label="">
+                    <mat-radio-button value="Yes">{{yes}}</mat-radio-button>
+                    <mat-radio-button value="No">{{no}}</mat-radio-button>
+                </mat-radio-group>
 
-            <br/>
-            <div class="button-row">
-                <button mat-raised-button color="accent" type="submit" [disabled]="service.form.invalid">{{submit}}</button>
-                <button mat-raised-button color="warn" [disabled]="service.form.controls['id'].value" (click)="onClear()">{{clear}}</button>
-            </div>
-        </form>
-    </mat-card-content>
-</mat-card>
+                <br/>
+                <div class="button-row">
+                    <button mat-raised-button color="accent" type="submit" [disabled]="service.form.invalid">{{submit}}</button>
+                    <button mat-raised-button color="warn" [disabled]="service.form.controls['id'].value" (click)="onClear()">{{clear}}</button>
+                </div>
+            </form>
+        </mat-card-content>
+        </mat-card>
+    </ion-infinite-scroll>
+</ion-content>
