--- a/src/app/qrcode/qrcode.component.html
+++ b/src/app/qrcode/qrcode.component.html
@@ -1,75 +1,93 @@
 <mat-card>
-  <mat-card-header>
-    <h3><span>Profile Details</span></h3>
+<ion-content>
+<ion-infinite-scroll>
+
+<mat-card-header>
+    <h3><span>E-Landing Card</span></h3>
     <span class="fill-remaining-space"></span>
     <button class="btn-dialog-close" mat-stroked-button color="warn" (click)="onClose()" tabIndex="-1"><mat-icon>clear</mat-icon></button>
-  </mat-card-header>
-  <mat-card-content>
-    <form [formGroup]="service.form" class="normal-form">
-      <input type="hidden" readonly formControlName="id">
-      <mat-form-field>
-        <input formControlName="nickname" readonly matInput placeholder="{{nickname}}">
-        <mat-error>{{mandatory}}</mat-error>
-      </mat-form-field>
+</mat-card-header>
+    <mat-card-content>
+        <form [formGroup]="service.form" class="normal-form">
+            <input type="hidden" formControlName="id">
+            <mat-form-field>
+                <mat-select matNativeControl formControlName="nickname" readonly placeholder="{{nickname}}">
+                    <div *ngFor="let profile of profiles">
+                        <mat-option value="{{profile.nickname}}">{{profile.nickname}}</mat-option>
+                    </div>
+                </mat-select>
+                <mat-error>{{mandatory}}</mat-error>
+            </mat-form-field>
 
-      <mat-slide-toggle [checked]="service.form.get('isMalaysian').value">{{isMalay}}</mat-slide-toggle>
+            <mat-form-field>
+                <mat-select matNativeControl formControlName="arrivingFrom" readonly placeholder="{{arrivingFrom}}">
+                    <div *ngFor="let country of countries">
+                        <mat-option value="{{country}}">{{country}}</mat-option>
+                    </div>
+                </mat-select>
+                <mat-error>{{mandatory}}</mat-error>
+            </mat-form-field>
 
-      <mat-form-field>
-        <mat-select matNativeControl readonly formControlName="nationality" placeholder="{{nationality}}">
-          <div *ngFor="let nationality of nationalities">
-            <mat-option value="{{nationality}}">{{nationality}}</mat-option>
-          </div>
-        </mat-select>
-        <mat-error>{{mandatory}}</mat-error>
-      </mat-form-field>
+            <mat-form-field>
+                <mat-select matNativeControl formControlName="arrivalAirport" readonly  placeholder="{{arrivalAirport}}">
+                    <div *ngFor="let airport of airports">
+                        <mat-option value="{{airport}}">{{airport}}</mat-option>
+                    </div>
+                </mat-select>
+                <mat-error>{{mandatory}}</mat-error>
+            </mat-form-field>
 
-      <mat-form-field>
-        <mat-select matNativeControl readonly formControlName="country"  placeholder="{{country}}">
-          <div *ngFor="let country of countries">
-            <mat-option value="{{country}}">{{country}}</mat-option>
-          </div>
-        </mat-select>
-        <mat-error>{{mandatory}}</mat-error>
-      </mat-form-field>
+            <mat-form-field>
+                <input formControlName="arrivingFlight" readonly matInput placeholder="{{arrivingFlight}}">
+                <mat-error>{{mandatory}}</mat-error>
+            </mat-form-field>
 
-      <mat-form-field>
-        <input formControlName="travelDocNum" readonly matInput placeholder="{{travelDocNo}}">
-        <mat-error *ngIf="service.form.controls['travelDocNum'].errors?.required">{{mandatory}}</mat-error>
-        <mat-error *ngIf="service.form.controls['travelDocNum'].errors?.pattern">TravelDocNum Should be Numeric</mat-error>
-      </mat-form-field>
+            <mat-form-field>
+                <input formControlName="purposeOfTravel" readonly matInput placeholder="{{purposeOfTravel}}">
+                <mat-error>{{mandatory}}</mat-error>
+            </mat-form-field>
 
-      <mat-form-field>
-        <input  [matDatepicker]="expiryDate" readonly formControlName="expiryDate" matInput placeholder="{{expiryDate1}}">
-        <mat-datepicker-toggle matSuffix [for]="expiryDate"></mat-datepicker-toggle>
-        <mat-datepicker #expiryDate></mat-datepicker>
-      </mat-form-field>
+            <mat-form-field>
+                <input formControlName="durationOfStay" readonly matInput placeholder="{{durationOfStay}}">
+                <mat-error>{{mandatory}}</mat-error>
+            </mat-form-field>
 
-      <mat-form-field>
-        <input formControlName="givenName" readonly matInput placeholder="{{givenName}}">
-        <mat-error>{{mandatory}}</mat-error>
-      </mat-form-field>
+            <br/>
 
-      <mat-form-field>
-        <input formControlName="surname" readonly matInput placeholder="{{surname}}">
-        <mat-error>{{mandatory}}</mat-error>
-      </mat-form-field>
-      <mat-form-field>
-        <input  [matDatepicker]="dob" readonly formControlName="dob" matInput placeholder="{{dob1}}">
-        <mat-datepicker-toggle matSuffix [for]="dob"></mat-datepicker-toggle>
-        <mat-datepicker #dob></mat-datepicker>
-      </mat-form-field>
-      <mat-radio-group formControlName="gender" readonly aria-label="Select an option">
-        <mat-radio-button value="Male">{{male}}</mat-radio-button>
-        <mat-radio-button value="Female">{{female}}</mat-radio-button>
-      </mat-radio-group>
+            <mat-label>{{commercialGood}} : </mat-label><br/>
+            <mat-radio-group formControlName="commercialGood" aria-label="" ng-readonly>
+                <mat-radio-button value="Yes">{{yes}}</mat-radio-button>
+                <mat-radio-button value="No">{{no}}</mat-radio-button>
+            </mat-radio-group>
+            <p></p>
+            <mat-label>{{currencyExceedingValue}} : </mat-label><br/>
+            <mat-radio-group formControlName="currencyExceedingValue" aria-label="" ng-readonly>
+                <mat-radio-button value="Yes">{{yes}}</mat-radio-button>
+                <mat-radio-button value="No">{{no}}</mat-radio-button>
+            </mat-radio-group>
+            <p></p>
 
-      <mat-form-field>
-        <input formControlName="identificationNo" readonly matInput placeholder="{{identificationNo}}">
-        <mat-error *ngIf="service.form.controls['identificationNo'].errors?.required">{{mandatory}}</mat-error>
-        <mat-error *ngIf="service.form.controls['identificationNo'].errors?.pattern">IdentificationNo Should be Numeric</mat-error>
-      </mat-form-field>
+            <mat-label>{{liveAnimalOrPlant}} : </mat-label><br/>
+            <mat-radio-group formControlName="liveAnimalOrPlant" aria-label="" ng-readonly>
+                <mat-radio-button value="Yes">{{yes}}</mat-radio-button>
+                <mat-radio-button value="No">{{no}}</mat-radio-button>
+            </mat-radio-group>
+            <p></p>
 
-      <br/>
-    </form>
-  </mat-card-content>
+            <mat-label>{{derivatives}} : </mat-label><br/>
+            <mat-radio-group formControlName="derivatives" aria-label="" ng-readonly>
+                <mat-radio-button value="Yes">{{yes}}</mat-radio-button>
+                <mat-radio-button value="No">{{no}}</mat-radio-button>
+            </mat-radio-group>
+            <p></p>
+
+            <mat-label>{{firearms}} : </mat-label><br/>
+            <mat-radio-group formControlName="firearms" aria-label="" ng-readonly>
+                <mat-radio-button value="Yes">{{yes}}</mat-radio-button>
+                <mat-radio-button value="No">{{no}}</mat-radio-button>
+            </mat-radio-group>
+        </form>
+    </mat-card-content>
+</ion-infinite-scroll>
+</ion-content>
 </mat-card>
